# pathfinder

./: .deepsource.toml  .gitignore  .mcp.json  AGENTS.md  COMMITS_SUMMARY.md  Cargo.toml  LICENSE  PATHFINDER_ERGONOMICS_REPORT.md  README.md  deny.toml  fix.sh  fix2.sh  fix3.sh  fix4.sh  fix_client.sh  lawyer_impl.txt  lcov.info  parse_ts.js  parse_ts.rs  release-plz.toml  task.md  test_hashmap  test_hashmap.rs  test_nll  test_parse_go.rs
.agent/rules/: architectural-pattern.md  ci-cd-principles.md  code-organization-principles.md  concurrency-and-threading-mandate.md  flutter-idioms-and-patterns.md  go-idioms-and-patterns.md  logging-and-observability-principles.md  pathfinder-tool-routing.md  project-structure-flutter-mobile.md  project-structure-go-backend.md  project-structure-rust-cargo.md  rugged-software-constitution.md  rule-priority.md  rust-idioms-and-patterns.md  security-principles.md  testing-strategy.md  typescript-idioms-and-patterns.md  vue-idioms-and-patterns.md
.agent/workflows/: 2-implement.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  generator-generic-ossf-slsa3-publish.yml  release-binaries.yml  slsa-provenance.yml
.jules/: bolt.md  sentinel.md  shield.md
.pi/: AGENTS.md
crates/pathfinder/: CHANGELOG.md  Cargo.toml
crates/pathfinder-common/: CHANGELOG.md  Cargo.toml
crates/pathfinder-common/benches/: guidance_bench.rs  sandbox_bench.rs  types_bench.rs
crates/pathfinder-common/src/: config.rs  config_test.rs  error.rs  error_test.rs  file_watcher.rs  git.rs  git_test.rs  indent.rs  lib.rs  normalize.rs  sandbox.rs  sandbox_test.rs  types.rs  types_test.rs
crates/pathfinder-common/tests/: file_watcher_integration.rs  git_integration.rs
crates/pathfinder-lsp/: CHANGELOG.md  Cargo.toml
crates/pathfinder-lsp/benches/: response_parsers_bench.rs  transport_bench.rs
crates/pathfinder-lsp/src/: error.rs  error_test.rs  lawyer.rs  lib.rs  lib_test.rs  mock.rs  mock_test.rs  no_op.rs  no_op_test.rs  plugin.rs  plugin_test.rs  types.rs
crates/pathfinder-lsp/src/client/: background.rs  background_test.rs  capabilities.rs  capabilities_test.rs  detect.rs  detect_test.rs  document.rs  document_test.rs  fake_transport.rs  lawyer_impl.rs  lawyer_impl_test.rs  lifecycle.rs  lifecycle_test.rs  mod.rs  mod.rs.orig  mod_test.rs  process.rs  protocol.rs  protocol_test.rs  response_parsers.rs  response_parsers_test.rs  transport.rs  transport_test.rs
crates/pathfinder-lsp/tests/: lsp_client_integration.rs
crates/pathfinder-lsp/tests/common/: mod.rs
crates/pathfinder-search/: CHANGELOG.md  Cargo.toml  test_matcher.rs  tests_context_overlap.rs
crates/pathfinder-search/benches/: grep_fallback_bench.rs  search_bench.rs
crates/pathfinder-search/src/: lib.rs  mock.rs  mock_test.rs  ripgrep.rs  ripgrep_test.rs  searcher.rs  types.rs  types_test.rs
crates/pathfinder-treesitter/: CHANGELOG.md  Cargo.toml
crates/pathfinder-treesitter/benches/: cache.rs  did_you_mean.rs  extraction.rs  parsing.rs  vue_zones.rs
crates/pathfinder-treesitter/src/: cache.rs  cache_test.rs  error.rs  error_test.rs  language.rs  language_test.rs  lib.rs  mock.rs  parser.rs  parser_test.rs  repo_map.rs  repo_map_test.rs  surgeon.rs  surgeon_test.rs  symbols.rs  symbols_test.rs  test_impl.rs  test_symbols.rs  treesitter_surgeon.rs  treesitter_surgeon_test.rs  vue_multizone_tests.rs  vue_zones.rs  vue_zones_test.rs
crates/pathfinder-treesitter/tests/: test_impl.rs  test_java.rs  test_rust_top_level.rs
crates/pathfinder-treesitter/tests/fixtures/: AnnotationType.java  BasicClass.java  EnumWithMethods.java  GenericClass.java  InnerClasses.java  InterfaceWithDefaults.java  LambdaExpressions.java  ModuleInfo.java  MultipleTopLevel.java  PackageInfo.java  RecordExample.java  SealedHierarchy.java
crates/pathfinder/benches/: find_symbol_bench.rs
crates/pathfinder/src/: lib.rs  main.rs  main_test.rs  server.rs  server_test.rs
crates/pathfinder/src/server/: helpers.rs  helpers_test.rs  types.rs  types_test.rs
crates/pathfinder/src/server/tools/: consolidated.rs  diagnostics.rs  edit.rs  file_ops.rs  find_symbol.rs  find_symbol_test.rs  mod.rs  navigation.rs  read_files.rs  read_files_test.rs  repo_map.rs  repo_map_test.rs  search.rs  search_test.rs  semantic_path.rs  semantic_path_test.rs  source_file.rs  source_file_test.rs  symbols.rs  symbols_test.rs
crates/pathfinder/src/server/tools/edit/: batch.rs  handlers.rs  mod.rs  text_edit.rs  validation.rs
crates/pathfinder/src/server/tools/edit/tests/: batch_tests.rs  handler_tests.rs  helpers.rs  mod.rs  text_edit_tests.rs  validation_tests.rs
crates/pathfinder/src/server/tools/navigation/: deep_context.rs  deep_context_test.rs  definition.rs  definition_test.rs  health.rs  health_test.rs  impact.rs  impact_test.rs  mod.rs  mod_test.rs  overview.rs  overview_test.rs  references.rs  references_test.rs  test_helpers.rs
crates/pathfinder/tests/: test_deser.rs  test_mcp_handshake.rs  test_read_source_file_integration.rs
crates/pathfinder/tests/common/: mod.rs
crates/test-mock-lsp/: Cargo.toml
crates/test-mock-lsp/src/: config.rs  handlers.rs  lib.rs  main.rs  protocol.rs
docs/: LSP-ARCHITECTURE.md  task.md
docs/adr/: adr-001-mock-boilerplate.md  adr-002-sunset-edit-tools.md
docs/agent_directives/: AGENTS.md  instructions.md
docs/audits/: 20260422-qlty-report.md  20260422-qlty-report2.md  20260425-tcv100-remediation-progress.md  20260426-tcv100-remediation-plan.md  E4_E7_Implementation_Audit.md  TCV-001-test-coverage-remediation.md  implementation-gaps-edge-cases-2026-04-26.md  issue-resolution-2026-04-26.md  pathfinder-mcp-adoption-audit.md  pathfinder_server_crate_audit_2026.md  review-findings-core-crates-2026-06-16-1016.md  review-findings-e2-2026-04-02-0540.md  review-findings-e7-2026-04-02-0608.md  review-findings-edit-tools-2026-03-07-0621.md  review-findings-full-codebase-2026-03-06-1358.md  review-findings-java-lsp-2026-06-12-0730.md  review-findings-navigation-search-2026-03-09-1959.md  review-findings-pathfinder-2026-03-31-0822.md  (+36 more)
(+150 files in other folders)
