[workspace]
members = [
    "crates/pathfinder",
    "crates/pathfinder-common",
    "crates/pathfinder-lsp",
    "crates/pathfinder-search",
    "crates/pathfinder-treesitter",
    # Test-only mock LSP binary used by pathfinder-lsp integration tests.
    # Not published to crates.io (publish = false in its Cargo.toml).
    "crates/test-mock-lsp",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "deny"
