[package]
name = "pathfinder-mcp-common"
version = "0.4.0"
edition = "2021"
license.workspace = true
description = "Shared types, errors, and infrastructure for Pathfinder MCP server"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-common"
keywords = ["mcp", "ai", "lsp", "code-intelligence"]
categories = ["development-tools"]

[lib]
name = "pathfinder_common"

[lints]
workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "sync", "rt", "io-util", "process", "time"] }
notify = "8"
ignore = "0.4"
tracing = "0.1"
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.13"
