[package]
name = "pathfinder-lsp"
version = "0.1.0"
edition = "2021"
description = "Pathfinder LSP client — the Lawyer engine"

[lints]
workspace = true

[dependencies]
pathfinder-common = { path = "../pathfinder-common" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
