[package]
name = "pathfinder-mcp-lsp"
version = "0.1.2"
edition = "2021"
license.workspace = true
description = "Pathfinder LSP client — the Lawyer engine"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-lsp"
keywords = ["mcp", "ai", "lsp", "language-server"]
categories = ["development-tools"]

[lib]
name = "pathfinder_lsp"

[lints]
workspace = true

[dependencies]
pathfinder-common = { version = "0.1.2", path = "../pathfinder-common", package = "pathfinder-mcp-common" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
tracing = "0.1"
url = "2"
schemars = "1.2.1"
# Spawn LSP children into their own process group so they are cleaned up
# automatically when Pathfinder exits — even via SIGKILL.
command-group = { version = "5", features = ["with-tokio"] }
# Resolve LSP binary names to absolute paths at detection time so that GUI
# launchers (which strip ~/.cargo/bin etc. from $PATH) still find the server.
which = "7"

# prctl(PR_SET_PDEATHSIG) — kernel-level parent-death signal for Unix.
# Ensures the LSP child is killed even if Pathfinder is SIGKILLed (Drop
# handlers do not run on SIGKILL, so kill_on_drop/GroupChild alone are
# insufficient on Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
