[package]
name = "pathfinder-mcp-lsp"
version = "0.4.0"
edition = "2021"
license.workspace = true
description = "Pathfinder LSP client — the Lawyer engine"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-lsp"
keywords = ["mcp", "ai", "lsp", "language-server"]
categories = ["development-tools"]

[lib]
name = "pathfinder_lsp"

[lints]
workspace = true

[dependencies]
pathfinder-common = { version = "0.3.0", path = "../pathfinder-common", package = "pathfinder-mcp-common" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync"] }
tracing = "0.1"
url = "2"
dashmap = "6"
schemars = "1.2.1"
# Spawn LSP children into their own process group so they are cleaned up
# automatically when Pathfinder exits — even via SIGKILL.
command-group = { version = "5", features = ["with-tokio"] }
# Resolve LSP binary names to absolute paths at detection time so that GUI
# launchers (which strip ~/.cargo/bin etc. from $PATH) still find the server.
which = "7"
# ST-2: Manifest validation — parse TOML marker files (Cargo.toml, pyproject.toml)
# before spawning LSP processes to fail fast on malformed manifests.
toml = "0.8"

# prctl(PR_SET_PDEATHSIG) — kernel-level parent-death signal for Unix.
# Ensures the LSP child is killed even if Pathfinder is SIGKILLed (Drop
# handlers do not run on SIGKILL, so kill_on_drop/GroupChild alone are
# insufficient on Linux).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# Used by integration tests to spawn the mock LSP server binary.
# The binary is built as part of the workspace; tests locate it via
# CARGO_BIN_EXE_test-mock-lsp (set automatically by `cargo test`).
test-mock-lsp = { path = "../test-mock-lsp" }

[features]
# Gate integration tests behind an explicit feature flag so `cargo test`
# (unit tests only) stays fast. Run integration tests with:
#   cargo test --workspace --features integration
integration = []

# Prevent the integration test binary from being compiled or executed unless
# `--features integration` is explicitly requested.  Without this, nextest
# builds and runs `lsp_client_integration` unconditionally, which panics when
# the `test-mock-lsp` binary has not been compiled.
[[test]]
name = "lsp_client_integration"
required-features = ["integration"]
