[package]
name = "pathfinder-mcp-search"
version = "0.2.1"
edition = "2021"
license.workspace = true
description = "The Scout — Ripgrep-powered text search engine for Pathfinder"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-search"
keywords = ["mcp", "ai", "search", "ripgrep"]
categories = ["development-tools"]

[lib]
name = "pathfinder_search"

[lints]
workspace = true

[dependencies]
pathfinder-common = { version = "0.1.4", path = "../pathfinder-common", package = "pathfinder-mcp-common" }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
globset = "0.4"
regex = "1"
tokio = { version = "1", features = ["fs", "rt"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1"
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
