[package]
name = "pathfinder-mcp-search"
version = "0.5.7"
edition = "2021"
license.workspace = true
description = "The Scout — Ripgrep-powered text search engine for Pathfinder"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-search"
keywords = ["mcp", "ai", "search", "ripgrep"]
categories = ["development-tools"]

[lib]
name = "pathfinder_search"

[lints]
workspace = true

[dependencies]
pathfinder-common = { version = "0.8.2", path = "../pathfinder-common", package = "pathfinder-mcp-common" }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
globset = "0.4"
regex = "1"
tokio = { version = "1", features = ["fs", "rt"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1"
schemars = "1.2.1"
sha2 = "0.11"
lru = "0.18"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "grep_fallback_bench"
harness = false

