[package]
name = "pathfinder-treesitter"
version = "0.1.0"
edition = "2021"
description = "The Surgeon — Tree-sitter engine for AST-aware operations in Pathfinder"

[lints]
workspace = true

[dependencies]
# Intra-workspace
pathfinder-common = { path = "../pathfinder-common" }

# Tree-sitter core
tree-sitter = "0.24"

# Language grammars (Tier 1)
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"

# Utilities
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
strsim = "0.11" # For did_you_mean Levenshtein distance
tokio = { version = "1", features = ["fs", "rt"] }
ignore = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
