[package]
name = "pathfinder-mcp-treesitter"
version = "0.1.1"
edition = "2021"
license.workspace = true
description = "The Surgeon — Tree-sitter engine for AST-aware operations in Pathfinder"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp-treesitter"
keywords = ["mcp", "ai", "tree-sitter", "ast", "code-intelligence"]
categories = ["development-tools", "parsing"]

[lib]
name = "pathfinder_treesitter"

[lints]
workspace = true

[dependencies]
# Intra-workspace
pathfinder-common = { version = "0.1.1", path = "../pathfinder-common", package = "pathfinder-mcp-common" }

# Tree-sitter core
tree-sitter = "0.24"

# Language grammars (Tier 1)
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"

# Language grammars (Tier 2 — Vue SFC multi-zone, E1a)
tree-sitter-html = "0.23"
tree-sitter-css  = "0.23"

# Utilities
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
strsim = "0.11" # For did_you_mean Levenshtein distance
tokio = { version = "1", features = ["fs", "rt"] }
ignore = "0.4"
lru = "0.16.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
futures = "0.3"
