[package]
name = "pathfinder-mcp"
version = "0.1.4"
edition = "2021"
license.workspace = true
description = "Pathfinder — The Headless IDE MCP Server for AI Coding Agents"
repository = "https://github.com/irahardianto/pathfinder"
homepage = "https://github.com/irahardianto/pathfinder"
documentation = "https://docs.rs/pathfinder-mcp"
keywords = ["mcp", "ai", "lsp", "code-intelligence", "ide"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"

[lints]
workspace = true

[[bin]]
name = "pathfinder-mcp"
path = "src/main.rs"

[lib]
name = "pathfinder_lib"
path = "src/lib.rs"

[dependencies]
pathfinder-common = { version = "0.1.3", path = "../pathfinder-common", package = "pathfinder-mcp-common" }
pathfinder-lsp = { version = "0.1.3", path = "../pathfinder-lsp", package = "pathfinder-mcp-lsp" }
pathfinder-search = { version = "0.1.3", path = "../pathfinder-search", package = "pathfinder-mcp-search" }
pathfinder-treesitter = { version = "0.1.3", path = "../pathfinder-treesitter", package = "pathfinder-mcp-treesitter" }
rmcp = { version = "=1.0.0", features = ["server", "macros", "transport-io"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
url = "2.5.8"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3.10"
